OCCUPY 修改为 RESERVED